@@ -1,3 +1,7 @@
+2008-12-21  Mark Ellis <mark@mpellis.org.uk>
+
+	* only update mime database when installing directly
+
 2008-12-19  Mark Ellis <mark@mpellis.org.uk>
 
 	* added synce: as a protocol, rapip: will deprecated
